# shared-fx-jni-src

./: .gitignore  README.md  build.gradle  settings.gradle
demo/: build.gradle
demo/src/main/java/xss/it/demo/: Demo.java  WindowDecoration.java
demo/src/main/resources/xss/it/demo/: style.css
fx-jni/: build.gradle
fx-jni/src/main/java/: module-info.java
fx-jni/src/main/java/com/sun/fx/jni/: Decoration.java  Rect.java
fx-jni/src/main/java/xss/it/fx/: AbstractDecoration.java
fx-jni/src/main/java/xss/it/fx/helpers/: CornerPreference.java  HitSpot.java  State.java
fx-jni/src/native/: CMakeLists.txt  IMPORTANT.md
fx-jni/src/native/src/: Decoration.cpp  fx-jni.rc
fx-jni/src/native/src/jni_headers/: com_sun_fx_jni_Decoration.h
fx-jni/src/native/src/utils/: FXWinProc.h  HwndMap.cpp  HwndMap.h  utils.cpp  utils.h
